Add style to media queri  logo nav image to fit smaller screens

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h3>Design</h3>
                 <br>
                <p>
-                Link your design or inspiration and send us your pair 
+                Link your design or inspiration and send us your shoes
                 </p>
                 <br>
                 <i class="fa-solid fa-object-group"></i>
