Remove unnecessary properties for cleaner code

--- a/index.html
+++ b/index.html
@@ -105,18 +105,16 @@
     <!-- check out our gallery -->
 
     <!-- about us -->
-    <section id="about-us">
+    <section id="#about-us-section-bg">
         <div class="about-section">
-            <div class="inner-container">
+            <div class="about-section-container">
                 <h1>About Us</h1>
                 <p class="about-text">
                     UNIQUE-KICKS is an independent customizing service for footwear. As employees and artists, we strive to become better and better. And for you to be happier and happier with our art.  We use all kinds of paint and tools to achieve a style that fits you.
               It all started as a fun idéa but turned into an even more fun job. Here, no shoe is the same and we hope we can make you a unique pair that is as unique as you.
                 </p>
                 <div class="about-skills">
-                    <span><em> Friendly Service ,</em></span>
-                    <span><em> Cool Designs ,</em></span>
-                    <span><em> Good Vibes </em></span>
+                    <span><em> Friendly Service, Cool Designs, Good Vibes</em></span>
                 </div>
             </div>
         </div>
