Add div element instead of section for header w3c validator

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
      <!-- header retry-->
         <header>
-            <section class="header">
+            <section>
+            <div class="header">
                 <nav>
                     <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
                     <div class="nav-links">
@@ -25,6 +26,7 @@
                         </ul>
                     </div>
                 </nav>
+            </div>
             </section>
         </header>
             <div class="text-box">
