Add change correct use of id and classes, change multiple h1s in single page for cleaner code

--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 
     <!--main gallery-->
     <section id="gallery-page">
-        <div id="photos">
+        <div class="photos">
             <img src="assets/images/main_gallery/grailify-CjxIizJXiao-unsplash.jpg" alt="white sneaker with splash design stepping out of car">
             <img src="assets/images/main_gallery/grailify-lQ5lbZmmlrI-unsplash.jpg" alt="three pairs of nike shoes with painted designs">
             <img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="close up painting black shoe">
