Add change correct use of id and classes for cleaner code

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
 
-     <!-- header retry-->
-        <header>
-            <div class="header">
+<!-- header retry-->
+    <header>
+            <div id="header">
                 <nav>
                     <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
                     <div class="nav-links">
@@ -26,7 +26,7 @@
                     </div>
                 </nav>
             </div>
-        </header>
+    </header>
             <div class="text-box">
                 <h1>CUSTOMIZE SNEAKERS</h1>
                 <p>
@@ -41,70 +41,69 @@
 
 <!-- how does it work retry-->
 
-<section class="how-does-work-bg">
-    <div class="how-does-work-container">
-        <div class="how-does-work-h2-and-boxes">
-            <h2>How does it work?</h2>
-            <p>You send us your shoe design request. We provide the design. Then you send the shoes you want to customize and we'll set you up with your customized pair.</p>
-            <br>
-            <div class="how-does-work-boxes">
-                <div class="box-steps">
-                        <h3>Send</h3>
+    <section class="how-does-work-bg">
+        <div class="how-does-work-container">
+            <div class="how-does-work-h2-and-boxes">
+                <h2>How does it work?</h2>
+                <p>You send us your shoe design request. We provide the design. Then you send the shoes you want to customize and we'll set you up with your customized pair.</p>
+                <br>
+                <div class="how-does-work-boxes">
+                    <div class="box-steps">
+                            <h3>Send</h3>
+                            <br>
+                        <p>
+                            Start by sending us an E-mail on our Contact page
+                            </p>
+                            <br>
+                            <i class="fa-solid fa-envelope-open-text"></i>
+                    </div>
+                    <div class="box-steps">
+                        <h3>Request</h3>
                         <br>
-                       <p>
-                        Start by sending us an E-mail on our Contact page
+                    <p>
+                        Give us a brief description of your request
                         </p>
                         <br>
-                        <i class="fa-solid fa-envelope-open-text"></i>
+                        <i class="fa-solid fa-pen-to-square"></i>
                 </div>
                 <div class="box-steps">
-                    <h3>Request</h3>
+                    <h3>Design</h3>
                     <br>
-                   <p>
-                    Give us a brief description of your request
+                <p>
+                    Link your design or inspiration and send us your shoes
                     </p>
                     <br>
-                    <i class="fa-solid fa-pen-to-square"></i>
-            </div>
-            <div class="box-steps">
-                <h3>Design</h3>
-                <br>
-               <p>
-                Link your design or inspiration and send us your shoes
-                </p>
-                <br>
-                <i class="fa-solid fa-object-group"></i>
-            </div>
-            <div class="box-steps">
-                <h3>Wait</h3>
-                <br>
-               <p>
-                Wait for your shoes to arrive when they're styled
-                </p>
-                <i class="fa-solid fa-hourglass"></i>
-            </div>
+                    <i class="fa-solid fa-object-group"></i>
+                </div>
+                <div class="box-steps">
+                    <h3>Wait</h3>
+                    <br>
+                <p>
+                    Wait for your shoes to arrive when they're styled
+                    </p>
+                    <i class="fa-solid fa-hourglass"></i>
+                </div>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 <!-- how does it work retry-->
 
-  
-    <!-- check out our gallery -->
+<!-- check out our gallery -->
     <section id="check-gallery">
-        <h2 class="mini-gallery-h2"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h2>
-        <br>
-        <div class="gallery-wrapper">
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="woman painting white sneakers"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="close up painting black shoe"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="man painting yellow shoes"></div>
-            <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="styled converse-style shoe next to paint and brush"></div>
-        </div>
+            <h2 class="mini-gallery-h2"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h2>
+            <br>
+            <div class="gallery-wrapper">
+                <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1758820598.jpg" alt="woman painting white sneakers"></div>
+                <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1136142212.jpg" alt="close up painting black shoe"></div>
+                <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_2126906909.jpg" alt="man painting yellow shoes"></div>
+                <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="styled converse-style shoe next to paint and brush"></div>
+            </div>
     </section>
-    <!-- check out our gallery -->
+<!-- check out our gallery -->
 
-    <!-- about us -->
+<!-- about us -->
     <section id="#about-us-section-bg">
         <div class="about-section">
             <div class="about-section-container">
@@ -119,9 +118,9 @@
             </div>
         </div>
     </section> 
-    <!-- about us -->
+<!-- about us -->
 
-    <!-- footer -->
+<!-- footer -->
     <footer>
         <div class="footer-section-content">
             <h3>Follow Us</h3>
@@ -142,9 +141,8 @@
             <p>carltallman  uniquekicks 2022</p>
         </div>
     </footer>
-    <!-- footer -->
-    <!-- font awesome script -->
+<!-- footer -->
+<!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0e85f08158.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
