--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
      <!-- header retry-->
         <header>
-            <section class="header">
+            <section id="header">
                 <nav>
                     <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
                     <div class="nav-links">
