Fix grammatical errors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="gallery.html">GALLARY</a></li>
+                            <li><a href="gallery.html">GALLERY</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </div>
@@ -45,11 +45,11 @@
         <div class="how-does-work-container">
             <div class="how-does-work-h2-and-boxes">
                 <h2>How does it work?</h2>
-                <p>You send us your shoe design request. We provide the design. Then you send the shoes you want to customize and we'll set you up with your customized pair.</p>
+                <p>You send us your desired shoe style. We provide the design. Then you send the shoes to us and we will set you up with the new customized shoes.</p>
                 <br>
                 <div class="how-does-work-boxes">
                     <div class="box-steps">
-                            <h3>Send</h3>
+                            <h3>SEND</h3>
                             <br>
                         <p>
                             Start by sending us an E-mail on our Contact page
@@ -58,7 +58,7 @@
                             <i class="fa-solid fa-envelope-open-text"></i>
                     </div>
                     <div class="box-steps">
-                        <h3>Request</h3>
+                        <h3>REQUEST</h3>
                         <br>
                     <p>
                         Give us a brief description of your request
@@ -67,7 +67,7 @@
                         <i class="fa-solid fa-pen-to-square"></i>
                 </div>
                 <div class="box-steps">
-                    <h3>Design</h3>
+                    <h3>DESIGN</h3>
                     <br>
                 <p>
                     Link your design or inspiration and send us your shoes
@@ -76,7 +76,7 @@
                     <i class="fa-solid fa-object-group"></i>
                 </div>
                 <div class="box-steps">
-                    <h3>Wait</h3>
+                    <h3>WAIT</h3>
                     <br>
                 <p>
                     Wait for your shoes to arrive when they're styled
