--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="gallery.html">GALLARY</a></li>
+                            <li><a href="gallery.html">GALLERY</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
                         </ul>
                     </div>
