Remove unnecessary html comments

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
@@ -9,10 +8,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>UNIQUE-KICKS</title>
 </head>
-
 <body>
-
-<!-- header retry-->
+<!-- header -->
     <header>
             <div id="header">
                 <nav>
@@ -35,12 +32,7 @@
                 </p>
                 <a href="contact.html" class="hero-btn">Customize Now!</a>
             </div>
-
-
-    <!-- header retry-->
-
-<!-- how does it work retry-->
-
+<!-- how does it work -->
     <section class="how-does-work-bg">
         <div class="how-does-work-container">
             <div class="how-does-work-h2-and-boxes">
@@ -87,9 +79,6 @@
             </div>
         </div>
     </section>
-
-<!-- how does it work retry-->
-
 <!-- check out our gallery -->
     <section id="check-gallery">
             <h2 class="mini-gallery-h2"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h2>
@@ -101,8 +90,6 @@
                 <div class="gallery-images-box"><img src="assets/images/Shutterstock/shutterstock_1369971998.jpg" alt="styled converse-style shoe next to paint and brush"></div>
             </div>
     </section>
-<!-- check out our gallery -->
-
 <!-- about us -->
     <section id="#about-us-section-bg">
         <div class="about-section">
@@ -118,8 +105,6 @@
             </div>
         </div>
     </section> 
-<!-- about us -->
-
 <!-- footer -->
     <footer>
         <div class="footer-section-content">
@@ -141,7 +126,6 @@
             <p>carltallman  uniquekicks 2022</p>
         </div>
     </footer>
-<!-- footer -->
 <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0e85f08158.js" crossorigin="anonymous"></script>
 </body>
