--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h2>About Us</h2>
                 <p class="about-text">
                     UNIQUE-KICKS is an independent customizing service for footwear. As employees and artists, we strive to become better and better. And for you to be happier and happier with our art.  We use all kinds of paint and tools to achieve a style that fits you.
-              It all started as a fun idéa but turned into an even more fun job. Here, no shoe is the same and we hope we can make you a unique pair that is as unique as you.
+              It all started as a fun idea but turned into an even more fun job. Here, no shoe is the same and we hope we can make you a unique pair that is as unique as you.
                 </p>
                 <div class="about-skills">
                     <span><em> Friendly Service, Cool Designs, Good Vibes</em></span>
