change names for images

--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
         <header>
             <section id="header">
                 <nav>
-                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
+                    <a href="index.html"><img src="assets/images/logo_unki.png" alt="site_logo"></a>
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
@@ -43,17 +43,17 @@
     <section id="gallery-page">
         <div class="photos">
             <img src="assets/images/main_gallery/white_sneaker_with_splash_design.jpg" alt="white sneaker with splash design stepping out of car">
-            <img src="assets/images/main_gallery/grailify-lQ5lbZmmlrI-unsplash.jpg" alt="three pairs of nike shoes with painted designs">
-            <img src="assets/images/Shutterstock/another_close_up_paint_black_shoe.jpg" alt="close up painting black shoe">
-            <img src="assets/images/Shutterstock/styled_shoe_paint_and_brush.jpg" alt="styled shoe next to paint and brush">
+            <img src="assets/images/main_gallery/three_pairs_of_shoes_with_painted_designs.jpg" alt="three pairs of nike shoes with painted designs">
+            <img src="assets/images/shutterstock/another_close_up_paint_black_shoe.jpg" alt="close up painting black shoe">
+            <img src="assets/images/shutterstock/styled_shoe_paint_and_brush.jpg" alt="styled shoe next to paint and brush">
             <img src="assets/images/main_gallery/purple_and_green_painted_shoes.jpg" alt="neon purple and light green painted shoes">
 
-            <img src="assets/images/Shutterstock/white_styled_shoe_next_to_paint_and_brush.jpg" alt="styled converse-style shoe next to paint and brush">
-            <img src="assets/images/Shutterstock/woman_painting_on_sneaker.jpg" alt="woman painting white sneakers">
-            <img src="assets/images/Shutterstock/woman_painting_on_side_of_white_sneaker.jpg" alt="woman painting design on the side of white sneaker">
-            <img src="assets/images/Shutterstock/close_up_paint_black_shoe.jpg" alt="close up painting black shoe in front of desk">
-            <img src="assets/images/Shutterstock/man_painting_yellow_shoes.jpg" alt="man painting yellow shoes">
-            <img src="assets/images/Shutterstock/brush_painting_on_red_and_blue_sneakers.jpg" alt="brush painting letter design on red and blue sneakers">
+            <img src="assets/images/shutterstock/white_styled_shoe_next_to_paint_and_brush.jpg" alt="styled converse-style shoe next to paint and brush">
+            <img src="assets/images/shutterstock/woman_painting_on_sneaker.jpg" alt="woman painting white sneakers">
+            <img src="assets/images/shutterstock/woman_painting_on_side_of_white_sneaker.jpg" alt="woman painting design on the side of white sneaker">
+            <img src="assets/images/shutterstock/close_up_paint_black_shoe.jpg" alt="close up painting black shoe in front of desk">
+            <img src="assets/images/shutterstock/man_painting_yellow_shoes.jpg" alt="man painting yellow shoes">
+            <img src="assets/images/shutterstock/brush_painting_on_red_and_blue_sneakers.jpg" alt="brush painting letter design on red and blue sneakers">
         </div>
     </section>
     
