--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
             <div id="header">
                 <nav>
-                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
+                    <a href="index.html"><img src="assets/images/logo_unki.png" alt="site_logo"></a>
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
@@ -84,10 +84,10 @@
             <h2 class="mini-gallery-h2"><br>CHECK OUT OUR GALLERY<a href="gallery.html" class="gallery-btn">HERE</a></h2>
             <br>
             <div class="gallery-wrapper">
-                <div class="gallery-images-box"><img src="assets/images/Shutterstock/woman_painting_on_sneaker.jpg" alt="woman painting white sneakers"></div>
-                <div class="gallery-images-box"><img src="assets/images/Shutterstock/another_close_up_paint_black_shoe.jpg" alt="close up painting black shoe"></div>
-                <div class="gallery-images-box"><img src="assets/images/Shutterstock/man_painting_yellow_shoes.jpg" alt="man painting yellow shoes"></div>
-                <div class="gallery-images-box"><img src="assets/images/Shutterstock/white_styled_shoe_next_to_paint_and_brush.jpg" alt="styled converse-style shoe next to paint and brush"></div>
+                <div class="gallery-images-box"><img src="assets/images/shutterstock/woman_painting_on_sneaker.jpg" alt="woman painting white sneakers"></div>
+                <div class="gallery-images-box"><img src="assets/images/shutterstock/another_close_up_paint_black_shoe.jpg" alt="close up painting black shoe"></div>
+                <div class="gallery-images-box"><img src="assets/images/shutterstock/man_painting_yellow_shoes.jpg" alt="man painting yellow shoes"></div>
+                <div class="gallery-images-box"><img src="assets/images/shutterstock/white_styled_shoe_next_to_paint_and_brush.jpg" alt="styled converse-style shoe next to paint and brush"></div>
             </div>
     </section>
 <!-- about us -->
