--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <header>
             <section id="header">
                 <nav>
-                    <a href="index.html"><img src="assets/images/LOGO_UnKi_1.png" alt="site_logo"></a>
+                    <a href="index.html"><img src="assets/images/logo_unki.png" alt="site_logo"></a>
                     <div class="nav-links">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
